<resources>
    <string name="app_name">Days</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_send">发送</string>
    <string name="action_modify">编辑</string>
    <string name="action_pic">选择</string>

    <string name="no_more">没有更多了~</string>
    <string name="no_diary">没有日志</string>
    <string name="no_event">没有事件</string>
    <string name="no_meizhi">没有妹子</string>
    <string name="no_network">没有网络</string>
    <string name="fail_connect">连接服务器失败，请稍后再试!</string>

    <string name="i_know">知道了</string>
    <string name="nav_sign_in">登录</string>
    <string name="nav_setting">设置</string>
    <string name="nav_diary">日记</string>
    <string name="nav_anniversary">纪念日</string>
    <string name="nav_share">分享</string>
    <string name="nav_sign_out">退出</string>
    
    <string name="user_name">侯鑫云</string>
    <string name="user_intro">啦啦啦啦啦啦~</string>

    //写日记
    <string name="write_something">写点什么吧~</string>
    <string name="date">日期</string>
    <string name="category">分类</string>
    <string name="category_type">生活</string>
    <string name="repeat_type">不重复</string>
    <string name="sticky">置顶</string>
    <string name="finish_time">结束时间</string>
    <string name="record">记录</string>
    <string name="save">保存</string>
    <string name="repeat">重复</string>
    <string name="event_name">事件名称</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="welcome_logo">Welcome</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    
    //设置
    <string name="title_interface">界面</string>
    <string name="start_animation">首页 Item 动画</string>
    <string name="title_system">系统</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about_content">关于</string>
    <string name="open_source">开源</string>

    <string name="save_picture">保存图片</string>
    
    
    
    
    
</resources>
